Updated outdated dependencies + minor fixes.