@@ -10,27 +10,19 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<compiler.plugin.version>3.8.0</compiler.plugin.version>
-		<java.version>11</java.version>
-		<surefire.plugin.version>2.22.1</surefire.plugin.version>
-		<allure.version>2.10.0</allure.version>
-		<aspectj.version>1.9.2</aspectj.version>
+		<compiler.plugin.version>3.10.1</compiler.plugin.version>
+		<java.version>17</java.version>
+		<surefire.plugin.version>3.0.0-M6</surefire.plugin.version>
+		<allure.version>2.18.1</allure.version>
+		<aspectj.version>1.9.9.1</aspectj.version>
 		<allure.results>${project.build.directory}/allure-results</allure.results>
 	</properties>
-
-    <repositories>
-        <repository>
-            <id>maven</id>
-            <name>snapshots</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </repository>
-    </repositories>
 
     <dependencies>
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
-			<version>6.14.3</version>
+			<version>7.6.0</version>
 			<exclusions>
 				<exclusion>
 					<groupId>junit</groupId>
@@ -51,32 +43,22 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.6</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jooq</groupId>
-			<artifactId>joor</artifactId>
-			<version>0.9.10</version>
+			<version>1.18.24</version>
 		</dependency>
 		<dependency>
 			<groupId>io.github.sskorol</groupId>
 			<artifactId>test-data-supplier</artifactId>
-			<version>1.9.0-SNAPSHOT</version>
+			<version>2.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
-			<version>1.8.0-beta2</version>
+			<version>2.0.0-alpha7</version>
 		</dependency>
 		<dependency>
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
-			<version>3.11.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>27.0.1-jre</version>
+			<version>3.22.0</version>
 		</dependency>
 	</dependencies>
 
@@ -127,7 +109,7 @@
 						<suiteXmlFile>src/test/resources/suites/parent.xml</suiteXmlFile>
 					</suiteXmlFiles>
 					<argLine>
-						-javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
+						-javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar --add-opens java.base/java.lang=ALL-UNNAMED
 					</argLine>
 				</configuration>
 				<dependencies>
@@ -141,12 +123,13 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
-				<version>3.1.1</version>
+				<version>3.3.0</version>
 			</plugin>
 
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
-				<version>3.1.0</version>
+				<version>3.2.0</version>
 				<executions>
 					<execution>
 						<id>copy-config</id>
@@ -185,9 +168,9 @@
 			<plugin>
 				<groupId>io.qameta.allure</groupId>
 				<artifactId>allure-maven</artifactId>
-				<version>2.9</version>
+				<version>2.11.2</version>
 				<configuration>
-					<reportVersion>2.7.0</reportVersion>
+					<reportVersion>2.18.1</reportVersion>
 				</configuration>
 			</plugin>
 		</plugins>
